--- a/config.org
+++ b/config.org
@@ -365,7 +365,9 @@ of your operating system.
 
   (use-package google-c-style
     :hook ((c-mode c++-mode) . google-set-c-style)
-           (c-mode-common . google-make-newline-indent))
+    (c-mode-common . google-make-newline-indent))
+
+  (setq c-basic-offset 4)
 #+end_src
 
 To allow =ccls= to know the dependencies of your =.cpp= files with your =.h=
