--- a/config.org
+++ b/config.org
@@ -3358,10 +3358,10 @@ authoring documents with a fast and effective plain-text system.
     (add-to-list 'org-speed-commands-user '("s" call-interactively 'org-schedule))
     (add-to-list 'org-speed-commands-user '("x" org-todo "DONE"))
     (add-to-list 'org-speed-commands-user '("y" org-todo-yesterday "DONE"))
-    (advice-add 'org-deadline :after (ignore-args #'org-save-all-org-buffers))
-    (advice-add 'org-schedule :after (ignore-args #'org-save-all-org-buffers))
-    (advice-add 'org-store-log-note :after (ignore-args #'org-save-all-org-buffers))
-    (advice-add 'org-todo :after (ignore-args #'org-save-all-org-buffers))
+    ;(advice-add 'org-deadline :after (ignore-args #'org-save-all-org-buffers))
+    ;(advice-add 'org-schedule :after (ignore-args #'org-save-all-org-buffers))
+    ;(advice-add 'org-store-log-note :after (ignore-args #'org-save-all-org-buffers))
+    ;(advice-add 'org-todo :after (ignore-args #'org-save-all-org-buffers))
     (org-clock-persistence-insinuate)
     (org-load-modules-maybe t))
 #+end_src
