--- a/config.org
+++ b/config.org
@@ -319,7 +319,7 @@ Use [[https://github.com/arcticicestudio/nord-emacs][nord-theme]] with [[https:/
 
 #+begin_src emacs-lisp :tangle yes
   (use-package doom-themes
-    :config (load-theme 'doom-sourcerer t))
+    :config (load-theme 'doom-gruvbox t))
 
   (use-package doom-modeline
     :defer 0.1
