refactor: remove qutebrowser

--- a/config.org
+++ b/config.org
@@ -40,7 +40,6 @@
   - [[#alert][Alert]]
   - [[#auto-completion][Auto-Completion]]
   - [[#backups][Backups]]
-  - [[#browser][Browser]]
   - [[#buffers][Buffers]]
   - [[#button-lock][Button Lock]]
   - [[#calculator][Calculator]]
@@ -1067,64 +1066,6 @@ certain files with GNU Emacs.
     (version-control t))
 #+end_src
 
-** Browser
-
-I try to avoid using the mouse as much as possible, even for
-navigation. Therefore, I use [[https://github.com/qutebrowser/qutebrowser][qutebrowser]], a keyboard-focused browser with a
-minimal GUI.
-
-#+begin_src emacs-lisp :tangle yes
-  (use-package browse-url
-    :ensure nil
-    :custom
-    (browse-url-browser-function 'browse-url-generic)
-    (browse-url-generic-program "qutebrowser"))
-#+end_src
-
-*** =engine-mode=
-
-I use it to do most of my web searches without leaving GNU Emacs.
-
-#+begin_src emacs-lisp :tangle yes
-  (use-package engine-mode
-    :defer 3
-    :config
-    (defengine amazon
-      "http://www.amazon.com/s/ref=nb_sb_noss?url=search-alias%3Daps&field-keywords=%s"
-      :keybinding "a")
-
-    (defengine duckduckgo
-      "https://duckduckgo.com/?q=%s"
-      :keybinding "d")
-
-    (defengine github
-      "https://github.com/search?ref=simplesearch&q=%s"
-      :keybinding "g")
-
-    (defengine google-images
-      "http://www.google.com/images?hl=en&source=hp&biw=1440&bih=795&gbv=2&aq=f&aqi=&aql=&oq=&q=%s"
-      :keybinding "i")
-
-    (defengine google-maps
-      "http://maps.google.com/maps?q=%s"
-      :keybinding "m"
-      :docstring "Mappin' it up.")
-
-    (defengine stack-overflow
-      "https://stackoverflow.com/search?q=%s"
-      :keybinding "s")
-
-    (defengine youtube
-      "http://www.youtube.com/results?aq=f&oq=&search_query=%s"
-      :keybinding "y")
-
-    (defengine wikipedia
-      "http://www.wikipedia.org/search-redirect.php?language=en&go=Go&search=%s"
-      :keybinding "w"
-      :docstring "Searchin' the wikis.")
-    (engine-mode t))
-#+end_src
-
 ** Buffers
 
 Buffers can quickly become a mess. For some people, it's not a problem, but I
@@ -1787,7 +1728,6 @@ Group jump-to-files commands.
       ("cE" (find-file (format "%s/sh/environ" xdg-config)) "environ")
       ("ci" (find-file (format "%s/i3/config" xdg-config)) "i3")
       ("cn" (find-file (format "%s/neofetch/config.conf" xdg-config)) "neofetch")
-      ("cq" (find-file (format "%s/qutebrowser/config.py" xdg-config)) "qutebrowser")
       ("cs" (find-file (format "%s/sway/config" xdg-config)) "sway")
       ("ct" (find-file (format "%s/tmux/tmux.conf" xdg-config)) "tmux")
       ("cp" (find-file (format "%s/polybar/simple-black" xdg-config)) "polybar")
@@ -2156,7 +2096,7 @@ Finally, specify to =erc= that you use a =.authinfo= file with:
     :custom
     (erc-autojoin-channels-alist '(("freenode.net" "#archlinux" "#bash" "##c++"
                                     "#emacs""#i3" "#latex" "#linux" "#python"
-                                    "#qutebrowser" "#reactjs" "#sway")))
+                                    "#reactjs" "#sway")))
     (erc-autojoin-timing 'ident)
     (erc-fill-function 'erc-fill-static)
     (erc-fill-static-center 22)
