refactor(langtool): set langtool dirs for Arch

--- a/config.org
+++ b/config.org
@@ -2747,11 +2747,9 @@ locally, download the desktop version and change the paths indicated below.
                                "EN_UNPAIRED_BRACKETS"
                                "UPPERCASE_SENTENCE_START"
                                "WHITESPACE_RULE"))
-    (langtool-language-tool-jar (expand-file-name
-                                 (format "%s/LangueageTool-4.2/languagetool-commandline.jar" xdg-lib)))
-    (langtool-language-tool-server-jar (expand-file-name
-                                        (format "%s/LanguageTool-4.2/languagetool-server.jar" xdg-lib)))
-    (langtool-mother-tongue "fr"))
+    (langtool-java-classpath
+      "/usr/share/languagetool:/usr/share/java/languagetool/*")
+    (langtool-mother-tongue "en"))
 #+end_src
 
 ** Terminal
